# MCPNet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md  compile_flags.txt
apps/: CMakeLists.txt
apps/combine/: CMakeLists.txt  combine.cpp
apps/correlation/: CMakeLists.txt  mi.cpp  pearson.cpp
apps/filter/: CMakeLists.txt  diagonal.cpp  dpi.cpp  mcp.cpp  select.cpp  threshold.cpp
apps/pipeline/: CMakeLists.txt  eval_mcpnet.cpp  mcpnet.cpp  mcpnet_helper.hpp
apps/transform/: CMakeLists.txt  auc_pr_roc.cpp  convert.cpp  transform.cpp
data/: gnw2K_names.txt  infergs_yeast_tfs.txt  r10c10.exp  r10c10.h5  r127c999.h5  r128c1000.h5
include/mcp/correlation/: AdaptivePartitioningMI.hpp  BSplineMI.hpp  Pearson.hpp
include/mcp/filter/: dpi.hpp  mcp.hpp  simd_maxmin.hpp  stencil.hpp  threshold.hpp
include/mcp/transform/: aupr.hpp  auroc.hpp  clr.hpp  combine.hpp  stouffer.hpp
